# codecontexter

./: .gitignore  README.md  app.py  pyproject.toml
src/codecontexter/: __init__.py  cli.py  constants.py  file_operations.py  language_detection.py  models.py  output_generators.py
